# Gitrist

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
crates/gitrust/: Cargo.toml  build.rs
crates/gitrust-core/: Cargo.toml
crates/gitrust-core/src/: highlight.rs  lib.rs
crates/gitrust-core/tests/: repo_ops.rs
crates/gitrust-core/tests/common/: mod.rs
crates/gitrust-server/: Cargo.toml
crates/gitrust-server/src/: lib.rs
crates/gitrust-server/tests/: api.rs  ws.rs
crates/gitrust-server/tests/common/: mod.rs
crates/gitrust-types/: Cargo.toml
crates/gitrust-types/src/: lib.rs
crates/gitrust-ui/: Cargo.toml  style.css
crates/gitrust-ui/src/: diff.rs  fetch.rs  graph.rs  lib.rs  main_panel.rs  sidebar.rs  state.rs  time_fmt.rs  ws.rs
crates/gitrust-web/: Cargo.toml  index.html
crates/gitrust-web/src/: main.rs
crates/gitrust/src/: main.rs
docs/: api.md  architecture.md  build.md
