[workspace]
resolver = "2"
members = [
    "crates/gitrust-types",
    "crates/gitrust-core",
    "crates/gitrust-server",
    "crates/gitrust-ui",
    "crates/gitrust-web",
    "crates/gitrust",
]
default-members = [
    "crates/gitrust-types",
    "crates/gitrust-core",
    "crates/gitrust-server",
    "crates/gitrust-ui",
    "crates/gitrust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/salavat/gitrust"

[workspace.dependencies]
gitrust-types = { path = "crates/gitrust-types" }
gitrust-core = { path = "crates/gitrust-core" }
gitrust-server = { path = "crates/gitrust-server" }
gitrust-ui = { path = "crates/gitrust-ui" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

gix = "0.83"

tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"

dioxus = "0.7"
dioxus-web = "0.7"
dioxus-desktop = "0.7"

clap = { version = "4", features = ["derive"] }
include_dir = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
