[package]
name = "gitrust-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitrust-types = { workspace = true }
gix = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-md = { workspace = true }
