[package]
name = "gitrust-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitrust-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
