[package]
name = "gitrust-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitrust-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
include_dir = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
rfd = { version = "0.15", optional = true }

[features]
# Pulls in the native file picker (`rfd`) and exposes the
# `/api/repo/pick-folder` endpoint that the desktop window uses to
# bypass macOS TCC by going through NSOpenPanel.
desktop = ["dep:rfd"]

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.24"
