[package]
name = "gitrust-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitrust-types = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
time = { version = "0.3", default-features = false, features = ["formatting"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-utils = "0.2"
js-sys = "0.3"
urlencoding = "2"
